# HighSchoolTasks26

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml  renovate.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: 1-feature.yml  2-bug.yml  3-enhancement.yml  4-refactor.yml  5-new-task.yml
.github/workflows/: ci-tasks.yaml  ci.yaml
config/: deployments.yaml  event.yaml  labels.yaml  participant-tags.yaml  registration.yaml
docs/: DEPLOYMENT.md  STRUCTURE.md  TESTING.md
docs/structure/: assets.md  config.md  description.md  docker-compose.md  pictures.md  solution.md  src.md
tasks/: schema.json
tasks/1-800-ogluszenie/: config.yaml  description.md  solution.md
tasks/900728/: config.yaml  description.md
tasks/akta-wikipopa/: Dockerfile  config.yaml  description.md  docker-compose.yaml  solution.md
tasks/ankieta/: config.yaml  description.md  solution.md
tasks/bibliotheca-jagellonica/: .dockerignore  Dockerfile  config.yaml  description.md  docker-compose.yaml  solution.md
tasks/bileciki-do-kontroli/: config.yaml  description.md  solution.md
tasks/casino/: config.yaml  description.md  docker-compose.yaml  solution.md
tasks/co-tam-sie-odjaniepawla/: Dockerfile  config.yaml  description.md  docker-compose.yaml
tasks/co-to-za-numer/: config.yaml  description.md
tasks/czemu-nie-dziala/: config.yaml  description.md  docker-compose.yaml
tasks/dratewka-simulator/: config.yaml  description.md  docker-compose.yaml
tasks/flappy-krak/: config.yaml
tasks/fly-you-fools/: config.yaml  description.md
toolbox/: main.py
(+254 files in other folders)
